kubernetes/premier-deploiement/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olivier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: olivier
  template:
    metadata:
      labels:
        app: olivier
    spec:
      containers:
        - name: myapp
          image: stefanprodan/podinfo
