kubernetes/premier-deploiement/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olivier
spec:
  selector:
    app: olivier
  ports:
    - port: 80
      targetPort: 9898
